bin/testsuite/tests/compiler/src/errors/compiler3172.swg
#global testerror "Err0652"

#test
{
    discard try
    {
    }
}